# qrypt-security-quickstarts-cpp

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_END2END_TEST.md  SDK_sha256sum  qrypt
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: ci.yml  cmake.yml
KeyGenDistributed/: CMakeLists.txt  README.md  build.sh
KeyGenDistributed/gtests/: CMakeLists.txt  KeyGenTests.cpp  MetadataValidityTests.cpp  README.md
KeyGenDistributed/src/: cli.cpp  cli.h  common.cpp  common.h  encrypt.cpp  encrypt.h  generate.cpp  generate.h  main.cpp
KeyGenLocal/: CMakeLists.txt  README.md  build.sh
KeyGenLocal/src/: main.cpp
compose/: Dockerfile  docker-compose.yml
demo/: Dockerfile  README.md  alice_setup.sh  bob_setup.sh  docker-compose.yml  run_alice_bob.sh
docs/: MULTIDEVICE-DEMO.md  QUICKSTART-BUILD.md
files/: sample.txt
rngd/: rngd.md
scripts/: flask_app.py
src/: cli.cpp  cli.h  common.cpp  common.h  eaas.cpp  eaas.h  encrypt.cpp  encrypt.h  keygen.cpp  keygen.h
test/: CMakeLists.txt  KeyGenTests.cpp  MetadataValidityTests.cpp  README.md  parse_nist_api.py
